estrutura inicial página projetos

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="img-6"></div>
         </div>
 
-        <a href=""><button>confira nossos projetos</button></a>
+        <a href="projetos.html"><button>confira nossos projetos</button></a>
     </section>
 
     <section id="servicos">
