estrutura inicial página serviços

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
             <h2>nossos</h2> <h2>serviços</h2>
         </div>
         <div class="content">
-            <a href=""><div class="servico s1 a"><p>MANUTENÇÃO DE JARDINS</p></div></a>
-            <a href=""><div class="servico s2 b"><p>PAISAGISMO</p></div></a>
-            <a href=""><div class="servico s3 a"><p>SERVIÇOS URBANOS</p></div></a>
-            <a href=""><div class="servico s4 b"><p>JARDINS SUSTENTÁVEIS</p></div></a>
-            <a href=""><div class="servico s5 a"><p>REFLORESTAMENTO</p></div></a>
+            <a href="servicos.html"><div class="servico s1 a"><p>MANUTENÇÃO DE JARDINS</p></div></a>
+            <a href="servicos.html"><div class="servico s2 b"><p>PAISAGISMO</p></div></a>
+            <a href="servicos.html"><div class="servico s3 a"><p>SERVIÇOS URBANOS</p></div></a>
+            <a href="servicos.html"><div class="servico s4 b"><p>JARDINS SUSTENTÁVEIS</p></div></a>
+            <a href="servicos.html"><div class="servico s5 a"><p>REFLORESTAMENTO</p></div></a>
         </div>
     </section>
 
