ajuste nos links das páginas

--- a/depoimentos.html
+++ b/depoimentos.html
@@ -10,22 +10,22 @@
 <body>
     <header>
         <nav>
-            <a href="#quem-somos">
-                <p>quem somos</p>
+            <a href="contato.html">
+                <p>entre em contato</p>
             </a>
-            <a href="#projetos">
+            <a href="projetos.html">
                 <p>projetos</p>
             </a>
         </nav>
 
-        <a href="#">
+        <a href="index.html">
         <img src="assets/img/logos/logo-1.svg" alt="logo floretum">
         </a>
             <nav>
-                <a href="#servicos">
+                <a href="servicos.html">
                     <p>serviços</p>
                 </a>
-                <a href="#depoimentos">
+                <a href="depoimentos.html">
                     <p>depoimentos</p>
                 </a>
         </nav>
@@ -169,7 +169,7 @@
             <img src="assets/img/logos/estrelas-2.svg" alt="cinco estrelas">
         </div>
 
-        <a href=""><button>entre em contato</button></a>
+        <a href="contato.html"><button>entre em contato</button></a>
 
     </section>
 
