--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
         </div>
 
-        <a href=""><button>confira os depoimentos</button></a>
+        <a href="depoimentos.html"><button>confira os depoimentos</button></a>
     </section>
 
     <section id="contato">
@@ -171,7 +171,7 @@
 
             </div>
 
-        <a href=""><button>converse conosco!</button></a>
+        <a href="contato.html"><button>converse conosco!</button></a>
     </section>
 
     <footer>
