--- a/projetos.html
+++ b/projetos.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav>
-            <a href="#quem-somos">
-                <p>quem somos</p>
+            <a href="contato.html">
+                <p>entre em contato</p>
             </a>
-            <a href="#projetos">
+            <a href="projetos.html">
                 <p>projetos</p>
             </a>
         </nav>
@@ -23,10 +23,10 @@
         <img src="assets/img/logos/logo-1.svg" alt="logo floretum">
         </a>
                 <nav>
-            <a href="#servicos">
+            <a href="servicos.html">
                 <p>serviços</p>
             </a>
-            <a href="#depoimentos">
+            <a href="depoimentos.html">
                 <p>depoimentos</p>
             </a>
         </nav>
@@ -55,7 +55,7 @@
       </aside>
       
   
-      <a href=".projeto"><h4>CONFIRA OS PROJETOS→</h4></a>
+      <a href="#"><h4>CONFIRA OS PROJETOS→</h4></a>
 
     </section>
 
